# smolval

./: .gitignore  CLAUDE.md  DESIGN.md  Dockerfile  ISSUES_SCRATCH.md  LICENSE  POSTGRES_COMPARISON_README.md  README.md  USAGE.md  docker-compose.yml  html  pyproject.toml  report.md  setup-postgres-testdata.sql  test_mcp.txt
.github/workflows/: docker.yml  integration.yml  publish.yml  quality.yml  test.yml
config/: claude-code-generation.yaml  claude-code-simple.yaml  example-anthropic-judge.yaml  example-anthropic.yaml  example-claude-code.yaml  example-gemini.yaml  example-ollama.yaml  example-openai.yaml  example.yaml  filesystem-only.yaml  honeycomb-gemini.yaml  honeycomb-openai.yaml  honeycomb.yaml  no-api-keys.yaml  openai-gpt4.yaml  postgres-comparison.yaml  postgres-v2-only.yaml  test-mock.yaml  test-simple.yaml
docs/: README.md  cli-reference.md  config-reference.md  getting-started.md  postgres-comparison.md  writing-prompts.md
docs/examples/: README.md  basic-file-operations.txt  config-basic.yaml  config-comparison.yaml  config-production.yaml  database-operations.txt  database-test.txt  development-config.yaml  filesystem-test.txt  integration-test.txt  ollama-config.yaml  performance-benchmark.txt  production-config.yaml  web-content-analysis.txt  web-fetch-test.txt
docs/examples/postgres/: README.md  postgres-comparison.txt  postgres-v1-only.yaml
example-usage/: README.md
example-usage/smolval/: .env.example  .gitignore  run.sh
example-usage/smolval/prompts/: analyze-codebase.txt  security-review.txt  test-coverage.txt
prompts/: database_analysis.txt  example.txt  file_operations.txt  github_analysis.txt  honeycomb-investigate.txt  honeycomb-simple.txt  honeycomb.txt  memory_and_learning.txt  multi_server_integration.txt  simple_test.txt  web_research_task.txt  web_search.txt
prompts/claude_code/: spa_betterspec.txt  spa_underspec.txt
prompts/honeycomb/: analyze.txt  basic.txt  triggers.txt
src/smolval/: __init__.py  agent.py  claude_parser.py  cli.py  config.py  judge.py  llm_client.py  mcp_client.py  output_manager.py  results.py
src/smolval/models/: __init__.py  agent.py  base.py  claude_stream.py
src/smolval/templates/: batch_result.html  comparison_result.html  single_result.html
tests/: README.md  __init__.py  conftest.py  test_agent.py  test_claude_code_agent.py  test_cli.py  test_config.py  test_integration.py  test_integration_ollama.py  test_integration_real_llm.py  test_integration_simple.py  test_judge.py  test_llm_client.py  test_mcp_client.py  test_output_manager.py  test_results.py
tests/utils/: ollama_utils.py
